--- a/application/index/view/buycars/indexlist.html
+++ b/application/index/view/buycars/indexlist.html
@@ -1,6 +1,7 @@
 {extend name="base"/}
 {block name="title"}买车-二手车网{/block}
 {block name="main"}
+<script src="__ADMIN__/js/jquery.cxselect.js" charset="utf-8"></script>
 <style media="screen">
     .pagination>li{display:inline}
 </style>
@@ -10,6 +11,15 @@
         <div class="condition">
             <span class="fl gray pl20">已选条件：</span>
             <ul class="condition_list fl">
+                {if $Think.cookie.brand_level1['name']}
+                <li><a class="condition" href="{:url('index/buycars/clearbrand',array('level'=>'1'))}">{$Think.cookie.brand_level1['name']}</a></li>
+                {/if}
+                {if $Think.cookie.brand_level2['name']}
+                <li><a class="condition" href="{:url('index/buycars/clearbrand',array('level'=>'2'))}">{$Think.cookie.brand_level2['name']}</a></li>
+                {/if}
+                {if $Think.cookie.brand_level3['name']}
+                <li><a class="condition" href="{:url('index/buycars/clearbrand',array('level'=>'3'))}">{$Think.cookie.brand_level3['name']}</a></li>
+                {/if}
                 {if $Think.cookie.level['name']}
                 <li><a class="condition" href="{:url('index/buycars/index',array('key'=>'level'))}">{$Think.cookie.level['name']}</a></li>
                 {/if}
@@ -24,7 +34,7 @@
                 {/if}
             </ul>
             <span class="del">
-                <a href="/simcms/index.php?m=search&clear=1">
+                <a href="{:url('index/buycars/clearCondition')}">
                     <i class="i-del"></i>清空全部条件
                 </a>
             </span>
@@ -32,59 +42,159 @@
         <ul class="search_list">
             <form method="get" action="/simcms/index.php">
                 <li>品&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;牌
-                    <a href="/simcms/index.php?m=search&c=b_0" class="here">全部</a>
-                    <a href="/simcms/index.php?m=search&c=b_1" >奥迪</a>
-                    <a href="/simcms/index.php?m=search&c=b_11" >本田</a>
-                    <a href="/simcms/index.php?m=search&c=b_16" >别克</a>
-                    <a href="/simcms/index.php?m=search&c=b_29" >大众</a>
-                    <a href="/simcms/index.php?m=search&c=b_41" >丰田</a>
-                    <a href="/simcms/index.php?m=search&c=b_42" >福特</a>
-                    <a href="/simcms/index.php?m=search&c=b_157" >现代</a>
-                    <a href="/simcms/index.php?m=search&c=b_158" >雪佛兰</a>
-                    <select id="brand" name="c">
-                        <option value=''>请选择品牌</option>
-                        <option value='b_1' >A 奥迪</option>
-                    </select>
-                    <select id="subbrand" name="sb">
-                        <option value="">请选择车系</option>
-                    </select>
-                    <input type="hidden" name="m" value="search">
-                    <input type="submit" value="搜索" class="cbutton">
+                    <a href="{:url('index/buycars/clearbrand',array('level'=>'1'))}"
+                    {if $Think.cookie.brand_level1==''}
+                    class="here"
+                    {/if}
+                    >全部</a>
+                    <span id="brands">
+                        <select name="brand_level1" class="brand1 brand">
+                            {if $Think.cookie.brand_level1['id']}
+                            <option value="{$Think.cookie.brand_level1['id']}">
+                                {$Think.cookie.brand_level1['name']}
+                            </option>
+                            {/if}
+                        </select>
+                        <select class="brand2 brand" name="brand_level2">
+                            {if $Think.cookie.brand_level2['id']}
+                            <option value="{$Think.cookie.brand_level2['id']}">
+                                {$Think.cookie.brand_level2['name']}
+                            </option>
+                            {/if}
+                        </select>
+                        <select class="brand3 brand" name="brand_level3">
+                            {if $Think.cookie.brand_level3['id']}
+                            <option value="{$Think.cookie.brand_level3['id']}">
+                                {$Think.cookie.brand_level3['name']}
+                            </option>
+                            {/if}
+                        </select>
+                    </span>
                 </li>
             </form>
         <li>车&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;型
-            <a href="{:url('index/buycars/index',array('key'=>'level'))}" class="here">全部</a>
+            <a href="{:url('index/buycars/index',array('key'=>'level'))}"
+                {if $Think.cookie.level==''}
+                class="here"
+                {/if}
+                >全部</a>
             {volist name="level" id="vo"}
-            <a href="{:url('index/buycars/index',array('key'=>'level','val'=>$vo.id))}">{$vo.name}</a>
+            <a href="{:url('index/buycars/index',array('key'=>'level','val'=>$vo.id))}"
+                {if $Think.cookie.level["where"][2]==$vo.id}
+                class="here"
+                {/if}
+                >{$vo.name}
+            </a>
             {/volist}
         </li>
         <li>价&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;格
-            <a href="{:url('index/buycars/index',array('key'=>'price'))}"  class="here">全部</a>
-            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>3))}" >3万以下</a>
-            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>5))}" >3-5万</a>
-            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>8))}" >5-8万</a>
-            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>12))}" >8-12万</a>
-            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>18))}" >12-18万</a>
-            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>24))}" >18-24万</a>
-            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>35))}" >24-35万</a>
-            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>50))}" >35-50万</a>
-            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>100))}" >50-100万</a>
-            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>0))}" >100万以上</a>
+            <a href="{:url('index/buycars/index',array('key'=>'price'))}"
+                {if $Think.cookie.price==''}
+                class="here"
+                {/if}>全部
+            </a>
+            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>3))}"
+                {if $Think.cookie.price['where'][2]=='3'}
+                class="here"
+                {/if}>3万以下</a>
+            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>5))}"
+                {if $Think.cookie.price['where'][2]=='3,5'}
+                class="here"
+                {/if}>3-5万
+            </a>
+            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>8))}"
+                {if $Think.cookie.price['where'][2]=='5,8'}
+                class="here"
+                {/if}>5-8万
+            </a>
+            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>12))}"
+                {if $Think.cookie.price['where'][2]=='8,12'}
+                class="here"
+                {/if}>8-12万
+            </a>
+            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>18))}"
+                {if $Think.cookie.price['where'][2]=='12,18'}
+                class="here"
+                {/if}>12-18万
+            </a>
+            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>24))}"
+                {if $Think.cookie.price['where'][2]=='18,24'}
+                class="here"
+                {/if}>18-24万
+            </a>
+            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>35))}"
+                {if $Think.cookie.price['where'][2]=='24,35'}
+                class="here"
+                {/if}>24-35万
+            </a>
+            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>50))}"
+                {if $Think.cookie.price['where'][2]=='35,50'}
+                class="here"
+                {/if}>35-50万</a>
+            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>100))}"
+                {if $Think.cookie.price['where'][2]=='50,100'}
+                class="here"
+                {/if}>50-100万</a>
+            <a href="{:url('index/buycars/index',array('key'=>'price','val'=>999))}"
+                {if $Think.cookie.price['where'][2]=='100'}
+                class="here"
+                {/if}>100万以上
+            </a>
         </li>
         <li>车&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;龄
-            <a href="{:url('index/buycars/index',array('key'=>'plate'))}"  class="here">全部</a>
-            <a href="{:url('index/buycars/index',array('key'=>'plate','val'=>1))}" >1年以内</a>
-            <a href="{:url('index/buycars/index',array('key'=>'plate','val'=>3))}" >1-3年</a>
-            <a href="{:url('index/buycars/index',array('key'=>'plate','val'=>5))}" >3-5年</a>
-            <a href="{:url('index/buycars/index',array('key'=>'plate','val'=>0))}" >5年以上</a>
+            <a href="{:url('index/buycars/index',array('key'=>'plate'))}"
+                {if $Think.cookie.plate==''}
+                class="here"
+                {/if}>全部
+            </a>
+            <a href="{:url('index/buycars/index',array('key'=>'plate','val'=>1))}"
+                {if $Think.cookie.plate['name']=='1年以内'}
+                class="here"
+                {/if}>1年以内
+            </a>
+            <a href="{:url('index/buycars/index',array('key'=>'plate','val'=>3))}"
+                {if $Think.cookie.plate['name']=='1-3年'}
+                class="here"
+                {/if}>1-3年
+            </a>
+            <a href="{:url('index/buycars/index',array('key'=>'plate','val'=>5))}"
+                {if $Think.cookie.plate['name']=='3-5年'}
+                class="here"
+                {/if}>3-5年
+            </a>
+            <a href="{:url('index/buycars/index',array('key'=>'plate','val'=>999))}"
+                {if $Think.cookie.plate['name']=='5年以上'}
+                class="here"
+                {/if}>5年以上
+            </a>
         </li>
         <li>排&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;量
-            <a href="{:url('index/buycars/index',array('key'=>'gas'))}"  class="here">全部</a>
-            <a href="{:url('index/buycars/index',array('key'=>'gas','val'=>1))}" >1.0L以下</a>
-            <a href="{:url('index/buycars/index',array('key'=>'gas','val'=>1.5))}" >1.1-1.5L</a>
-            <a href="{:url('index/buycars/index',array('key'=>'gas','val'=>2))}" >1.6-2.0L</a>
-            <a href="{:url('index/buycars/index',array('key'=>'gas','val'=>3))}" >2.1-3.0L</a>
-            <a href="{:url('index/buycars/index',array('key'=>'gas','val'=>0))}" >3.0L及以上</a>
+            <a href="{:url('index/buycars/index',array('key'=>'gas'))}"
+                {if $Think.cookie.gas==''}
+                class="here"
+                {/if}>全部
+            </a>
+            <a href="{:url('index/buycars/index',array('key'=>'gas','val'=>1))}"
+                {if $Think.cookie.gas['name']=='1.0L以下'}
+                class="here"
+                {/if}>1.0L以下
+            </a>
+            <a href="{:url('index/buycars/index',array('key'=>'gas','val'=>1.5))}"
+                {if $Think.cookie.gas['name']=='1.1L-1.5L'}
+                class="here"
+                {/if}>1.1-1.5L</a>
+            <a href="{:url('index/buycars/index',array('key'=>'gas','val'=>2))}"
+                {if $Think.cookie.gas['name']=='1.6L-2.0L'}
+                class="here"
+                {/if}>1.6-2.0L</a>
+            <a href="{:url('index/buycars/index',array('key'=>'gas','val'=>3))}"
+                {if $Think.cookie.gas['name']=='2.1L-3.0L'}
+                class="here"
+                {/if}>2.1-3.0L</a>
+            <a href="{:url('index/buycars/index',array('key'=>'gas','val'=>999))}"
+                {if $Think.cookie.gas['name']=='3.0L以上'}
+                class="here"
+                {/if}>3.0L及以上</a>
         </li>
     </ul>
 </div>
@@ -94,10 +204,38 @@
         <div class="search_big_box">
             <div class="orderlist">
                 <ul class="fl">
-                    <li><a href="{:url('index/buycars/index',array('order'=>'listtime'))}" class="or01">时间</a></li>
-                    <li><a href="{:url('index/buycars/index',array('order'=>'price'))}" class="or02">价格</a></li>
-                    <li><a href="{:url('index/buycars/index',array('order'=>'kilometer'))}" class="or02">里程</a></li>
-                    <li><a href="{:url('index/buycars/index',array('order'=>'plate'))}"  class="or02">车龄</a></li>
+                    <li><a href="{:url('index/buycars/index',array('order'=>'listtime'))}"
+                        {if $Think.cookie.listtime==''}
+                        class="or02"
+                        {elseif $Think.cookie.listtime=='asc' /}
+                        class="or01"
+                        {else /}
+                        class="or03"
+                        {/if}>时间</a></li>
+                    <li><a href="{:url('index/buycars/index',array('order'=>'price'))}"
+                        {if $Think.cookie.priceorder==''}
+                        class="or02"
+                        {elseif $Think.cookie.priceorder=='asc' /}
+                        class="or01"
+                        {else /}
+                        class="or03"
+                        {/if}>价格</a></li>
+                    <li><a href="{:url('index/buycars/index',array('order'=>'kilometer'))}"
+                        {if $Think.cookie.kilometer==''}
+                        class="or02"
+                        {elseif $Think.cookie.kilometer=='asc' /}
+                        class="or01"
+                        {else /}
+                        class="or03"
+                        {/if}>里程</a></li>
+                    <li><a href="{:url('index/buycars/index',array('order'=>'plate'))}"
+                        {if $Think.cookie.plateorder==''}
+                        class="or02"
+                        {elseif $Think.cookie.plateorder=='asc' /}
+                        class="or01"
+                        {else /}
+                        class="or03"
+                        {/if}>车龄</a></li>
                 </ul>
                 <div class="showtype">
                     <span class="type01"><a href="{:url('index/buycars/index',array('view'=>'indexlist'))}">列表</a></span>
@@ -105,9 +243,18 @@
                 </div>
                 <div class="page_num">
                     <span>每页显示：</span>
-                    <span class="num"><a href="{:url('index/buycars/index',array('paginate'=>'1'))}" class="fb orange01">30</a></span>
-                    <span class="num"><a href="{:url('index/buycars/index',array('paginate'=>'2'))}" >60</a></span>
-                    <span class="num"><a href="{:url('index/buycars/index',array('paginate'=>'3'))}" >90</a></span>
+                    <span class="num"><a href="{:url('index/buycars/index',array('paginate'=>'1'))}"
+                        {if $Think.cookie.paginate==1}
+                        class="fb orange01"
+                        {/if}>1</a></span>
+                    <span class="num"><a href="{:url('index/buycars/index',array('paginate'=>'2'))}"
+                        {if $Think.cookie.paginate==2 OR $Think.cookie.paginate==''}
+                        class="fb orange01"
+                        {/if}>2</a></span>
+                    <span class="num"><a href="{:url('index/buycars/index',array('paginate'=>'3'))}"
+                        {if $Think.cookie.paginate==3}
+                        class="fb orange01"
+                        {/if}>3</a></span>
                 </div>
             </div>
             <div class="box">
@@ -121,7 +268,7 @@
                     <div class="word">
                         <p class="clearfix">
                             <span class="carname fl">
-                                <a href="{:url('index/cars/carsdetails',array('id'=>$vo.id))}" target="_blank">{$vo.full_name} {$vo.gas}</a>
+                                <a href="{:url('index/cars/carsdetails',array('id'=>$vo.id))}" target="_blank">{$vo.full_name} {$vo.gas}L</a>
                             </span>
                         </p>
                         <p class="gray">
@@ -145,4 +292,41 @@
         </div>
     </div>
 </div>
+<script type="text/javascript">
+    $("#brands").cxSelect({
+        url:"{:url('index/buycars/brandJsonGet')}",
+        selects:['brand1','brand2','brand3'],
+        jsonName:'name',
+        jsonValue:'id',
+        jsonSub:'children',
+    })
+
+    $(".brand").change(function(event) {
+        /* Act on the event */
+        var id = $(this).val();
+        var brand_level = $(this).attr('name');
+        var name = $(this).find("option:selected").html();
+        $.ajax({
+            url: '{:url("index/buycars/index")}',
+            type: 'post',
+            data: {id: id,brand_level:brand_level,name:name}
+        })
+        .done(function(data) {
+            // if (data==1) {
+            //     window.location.reload();
+            //
+            // }
+        })
+        .fail(function() {
+            console.log("error");
+        })
+        .always(function() {
+            console.log("complete");
+        });
+
+    }).blur(function(event) {
+        /* Act on the event */
+        window.location.href='{:url("index/buycars/index")}';
+    });
+</script>
 {/block}
