--- a/application/index/view/member/userhead.html
+++ b/application/index/view/member/userhead.html
@@ -4,6 +4,11 @@
 			会员中心
 		</div>
 		<div class="usertop_right">
-		{$Think.cookie.member['member_name']} | <a href='{:url("index/member/membercenter")}'>会员中心</a> |  <a href="/simcms/index.php?m=shop&id=182" target="_blank">我的店铺</a> | <a href='{:url("index/member/logout")}'>退出</a> | <a href='/simcms/'>返回首页</a> 		</div>
+    		{$Think.cookie.member['member_name']} |
+            <a href='{:url("index/member/membercenter")}'>会员中心</a> |
+            <a href="/simcms/index.php?m=shop&id=182" target="_blank">我的店铺</a> |
+            <a href='{:url("index/member/logout")}'>退出</a> |
+            <a href='{:url("index/index/index")}'>返回首页</a>
+        </div>
 	</div>
 </div>
