--- a/application/index/view/public/navlist.html
+++ b/application/index/view/public/navlist.html
@@ -7,10 +7,10 @@
         <a href="{:url('index/buycars/index')}" title="我要买车"  >我要买车</a>
         </li>
                 <li>
-        <a href="index.php?m=user&a=addcar" title="我要卖车"  target="_blank">我要卖车</a>
+        <a href="{:url('index/member/erchoucheadd')}" title="我要卖车"  target="_blank">我要卖车</a>
         </li>
                 <li>
-        <a href="/simcms/index.php?m=assesscar" title="车价评估"  >车价评估</a>
+        <a href="{:url('index/assessment/index')}" title="车价评估"  >车价评估</a>
         </li>
                 <li>
         <a href="/simcms/index.php?m=qiugou" title="求购信息"  >求购信息</a>
