--- a/application/index/view/public/navlist.html
+++ b/application/index/view/public/navlist.html
@@ -13,13 +13,11 @@
             <a href="{:url('index/assessment/index')}" title="车价评估"  >车价评估</a>
         </li>
 
-
-
         <li>
-            <a href="/simcms/index.php?m=issell&c=s_2" title="成交车辆"  >成交车辆</a>
+            <a href="#" title="成交车辆"  >成交车辆</a>
         </li>
         <li>
-            <a href="/simcms/index.php?m=rentcar" title="我要租车"  >我要租车</a>
+            <a href="{:url('index/rentcars/index')}" title="我要租车"  >我要租车</a>
         </li>
         <li style="float:right;"><a href="/simcms/index.php?m=dealer" class="here" style="background:#53a3e8;width:130px;vertical-align:top;"><img src="__INDEX__/default/img/dealer.png"/>认证商家</a></li>
     </ul>
